tests/More/Bad/1.tig
/* Type mismatch */
if true then 5 else "hello"
